<package>
  <name>cam_grab</name>
  <version>1.2.4</version>
  <description>
    camera graber-publisher to ros
  </description>
  <maintainer email="evangeliou@ece.upatras.gr">PR-cam_grab</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>image_geometry</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
   <run_depend>image_geometry</run_depend>
</package>