<package>
  <name>falconchai3d</name>
  <version>1.2.4</version>
  <description>
  This package provides serial_board capability.
  </description>
  <maintainer email="evangeliou@ece.upatras.gr">PR-falconchai3d</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
</package>